systemd System and Service Manager

   systemd (214.10-dev)
~~~~~~~
 * core:
 	- remove initramfs support;
 * libsystemd:
 	• struct sd_bus:
 		- remove “machine” field;
 		- remove “kernel” field;
 		- remove “use_memfd” field;
 	• struct bus_body_part:
 		- remove “memfd” field;
 	- remove “bus_message_map_properties_changed” function;
 	- remove “BusTransport” enum;
 	- remove “sd_bus_open_system_container” function;
 	- allow naming event sources;
 	- use event source name rather than address in debug messages;
 	- name event sources used in libraries;
 	- remove “bus_kernel_take_fd” function;
 	- remove “bus_kernel_write_message” function;
 	- remove “bus_kernel_read_message” function;
 	- remove “bus_kernel_create_domain” function;
 	- remove “bus_event_loop_with_idle” function;
 	- remove “sd_bus_try_close” function;
 	- remove “bus_remove_match_internal_kernel” function;
 	- remove “bus_add_match_internal_kernel” function;
 	- remove “bus_kernel_parse_unique_name” function;
 	- remove “kdbus_translate_request_name_flags” function;
 * loginctl:
 	- remove “machine” argument option;
 * systemd-analyze:
 	- remove “machine” argument option;
 * systemd-run:
 	- remove “machine” argument option;
 * kdbus:
 	- remove “sd-resolve” module;
 	- remove “sd-utf8” module;
 	- remove “bus-container” module;
 * systemctl:
 	- remove “list-machines” command;
 	- remove “recursive” argument option;
 	- remove “machine” argument option;
 	- filter templates from restartable units in bash-completion;
 * units:
 	- remove “org.freedesktop.login1” busname;
 	- remove “org.freedesktop.systemd1” busname;
 	- remove “busnames” target;
 * po:
 	- update Russian translation;
 	- update French translation;
 * tests:
 	- remove “test-resolve” test;
 	- remove “test-bus-kernel” test;
 	- remove “test-bus-kernel-bloom” test;
 	- remove “test-bus-kernel-benchmark” test;
 * build:
 	- remove USER_BUSNAMES_TARGET_WANTS unit path;
 	- remove BUSNAMES_TARGET_WANTS unit path;